# feos-campd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  license-apache  license-mit  pyproject.toml
.github/workflows/: release.yml  test.yml
feos_campd/: __init__.py
knitro_rs/: Cargo.toml  README.md  build.rs  knitro12.h  knitro13.h
knitro_rs/src/: lib.rs
src/: knitro.rs  lib.rs  property.rs  variables.rs
src/molecule/: comt_camd.rs  comt_camd_binary.rs  disjunction.rs  mixture.rs  mod.rs  polynomial.rs  supermolecule.rs  supermolecule_disjunct.rs
src/process/: equipment.rs  heat_pump.rs  mod.rs  orc.rs  orc_superstructure.rs  process.rs  process_state.rs
src/property/: comt_camd.rs  comt_camd_binary.rs  gc_pcsaft.rs  ideal_gas.rs  mod.rs  pcsaft.rs
src/python/: comt_camd.rs  dippr.rs  eos.rs  joback.rs  mod.rs  molecule.rs  orc.rs  pcsaft.rs  process.rs  property.rs
src/solver/: dual_vec_multiple.rs  mod.rs  nlp.rs  outer_approximation.rs  process_optimization.rs
tests/: binary.rs  comt_camd_non_assoc.json  gross_2001_comps.json  mixture_test_comps.json  mixture_test_comps_binary.json  options_12.opt  options_13.opt  options_MILP.opt  options_target.opt  orc.json  orc.rs  sauer2014_homo_joback.json
