[package]
name = "feos-campd"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Computer-aided molecular and process design using the FeOs framework."
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos-campd"
keywords = ["process_engineering", "molecular_design", "optimization"]
categories = ["science"]

[dependencies]
feos-core = { path = "../feos/feos-core" }
feos = { path = "../feos", features = ["pcsaft", "gc_pcsaft"] }
ndarray = "0.15"
petgraph = "0.6"
serde = "1.0"
serde_json = "1.0"
knitro_rs = { version = "0.1", path = "knitro_rs", optional = true }

[dev-dependencies]
itertools = "0.11"
approx = "0.5"

[features]
default = []
knitro_12 = ["knitro_rs/knitro_12"]
knitro_13 = ["knitro_rs/knitro_13"]