[package]
name = "feos-campd"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Computer-aided molecular and process design using the FeOs framework."
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos-campd"
keywords = ["process_engineering", "molecular_design", "optimization"]
categories = ["science"]

[lib]
name = "feos_campd"
crate-type = ["rlib", "cdylib"]

[dependencies]
feos-core = { version = "0.6", optional = true }
feos = { version = "0.6", features = ["pcsaft", "gc_pcsaft"] }
ndarray = "0.15"
petgraph = "0.6"
serde = "1.0"
serde_json = "1.0"
itertools = "0.12"
knitro_rs = { version = "0.1", path = "knitro_rs", optional = true }
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py37"], optional = true }
numpy = { version = "0.20", optional = true }
quantity = { version = "0.7", optional = true }
typenum = "1.17"
indexmap = "2.2"

[dev-dependencies]
approx = "0.5"
anyhow = "1.0"

[features]
default = []
knitro_12 = ["knitro_rs/knitro_12"]
knitro_13 = ["knitro_rs/knitro_13"]
python = ["pyo3", "numpy", "knitro_12", "quantity/python", "feos-core/python"]