[package]
name = "feos-campd"
version = "0.3.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Computer-aided molecular and process design using the FeOs framework."
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos-campd"
keywords = ["process_engineering", "molecular_design", "optimization"]
categories = ["science"]

[dependencies]
num-dual = { version = "0.11", features = ["linalg"] }
quantity = { version = "0.10", features = ["num-dual"] }
nalgebra = "0.33"
feos-core = "0.8"
ndarray = "0.16"
feos-ad = "0.2"
num-traits = "0.2"
good_lp = { version = "1.11", default-features = false }
ipopt = "0.6"
ipopt-ad = "0.1"
serde = "1.0"

[dev-dependencies]
approx = "0.5"
itertools = "0.14"

[features]
default = ["highs"]
highs = ["good_lp/highs"]
