[package]
name = "knitro_rs"
version = "0.2.1"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust Bindings for Artelys Knitro."
readme = "README.md"
repository = "https://github.com/feos-org/feos-campd"
keywords = ["optimization", "MINLP"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"

[features]
knitro_12 = []
knitro_13 = []
